@@ -1,3 +1,16 @@
-include MANIFEST.in
-include README.md
+include CHANGELOG.txt
 include LICENSE
+include MANIFEST.in
+include Makefile
+include README.md
+include pyproject.toml
+include requirements.txt
+include docs/*.rst
+include docs/conf.py
+include docs/Makefile
+include docs/make.bat
+include docs/figures/*
+include src_c/*
+include src_c/include/*.h
+include tests/test_*.py
+include .readthedocs.yml
